[package]
name = "network_probe"
version = "0.1.0"
edition = "2021"

[dependencies]
# 网络相关
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# DNS解析
trust-dns-resolver = "0.23"

# ICMP ping
surge-ping = "0.7"

# 路由跟踪
# traceroute = "0.1"  # 暂时移除，使用自定义实现

# Web框架
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 命令行解析
clap = { version = "4.0", features = ["derive"] }

# 日志
log = "0.4"
env_logger = "0.11"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 随机数
rand = "0.8"

# 异步工具
futures = "0.3"
futures-util = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 性能测试
criterion = { version = "0.5", optional = true }

# 配置管理
config = "0.14"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "network_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"